Update and rename index.html to principal.html

--- a/principal.html
+++ b/principal.html
@@ -13,7 +13,7 @@
     <header class="header">
         <img src="Imagenes/Logo.jpg" alt="" class="Logo">
         <nav class ="menu-navegacion">
-            <a href="index.html">Home</a>
+            <a href="principal.html">Home</a>
             <a href="circulo.html">Circulo Cromatico</a>
         </nav>
     </header>    
