--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="contenedor-servicio">
                 <img src="Imagenes/fondo.jpg" alt="">
                 <div class ="sobre-nosotros">
-                        <h1>Sobre Nosotros</h1></br></br>
+                        <h1>Sobre Nosotros</h1></br>
                         <p>Somos un grupo de asesores de imagen personal, que busca empoderar a las mujeres a través del conocimiento de ellas mismas, utilizando el vestuario como su herramienta principal. Nuestro propósito se basa en el uso adecuado y creativo de los colores, para resaltar cada una de nuestras virtudes físicas.</p>
                 </div>
             </div>
