--- a/circulo.html
+++ b/circulo.html
@@ -15,6 +15,7 @@
         <nav class ="menu-navegacion">
             <a href="index.html">Home</a>
             <a href="circulo.html">Circulo Cromatico</a>
+            <a href="combina.html">¿Cómo combinar?</a>
         </nav>
         <div class="head" id=inicio>
             <img src="Imagenes/menu.svg" alt="" class="opcion">
