--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav class ="menu-navegacion">
             <a href="index.html">Home</a>
             <a href="circulo.html">Circulo Cromatico</a>
+            <a href="combina.html">¿Cómo combinar?</a>
         </nav>
     </header>    
 
